--- a/style.css
+++ b/style.css
@@ -179,7 +179,11 @@ header .navbar {
     text-align: center;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
-
+.product-item img{
+    width: 200px;
+    object-fit: cover;
+    height: 200px;
+}
 .product-item:hover {
     transform: translateY(-10px);
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
@@ -498,6 +502,11 @@ body{
 .service-card:hover {
     transform: translateY(-10px);
 }
+.service-card img{
+    width: 250px;
+    height: 250px;
+    object-fit: cover;
+}
 
 .service-icon {
     font-size: 40px;
@@ -782,6 +791,12 @@ input:focus, textarea:focus {
 
 .collection-item:hover {
     transform: translateY(-10px);
+}
+.collection-item img{
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 8px;
 }
 
 .collection-image {
